hello/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: mcshane.k8s.halyard.app
    http:
      paths:
      - backend:
          serviceName: hello-kubernetes-custom
          servicePort: https
        path: /
  tls:
  - hosts:
    - mcshane.k8s.halyard.app
    secretName: hello-secret
